--- a/public/css/login.css
+++ b/public/css/login.css
@@ -3,18 +3,19 @@
     text-align:center;
     position:absolute;
     width:300px;
-    height:400px;
-    left:50%;
+    height:auto;
+    left:-500%;
     margin-left:-150px;
-    top:-500%;
+    top:50%;
     margin-top:-200px;
     -webkit-box-shadow: lightslategray 2px 4px 4px 2px;;
     -moz-box-shadow: lightslategray 2px 4px 4px 2px;;
     box-shadow: lightslategray 2px 4px 4px 2px;;
 }
-h1{
+h2{
     background-color: lightslategray;
     color:white;
+    padding:10px  0 10px;
 }
 input{
     font-size: 1.5em;
@@ -25,8 +26,14 @@ input{
     border-radius:4px;
     margin-bottom: 20px;
 }
-#error{
+.help-block{
+    margin:auto;
     color:red;
-    font-size:1em;
+    font-size:.9em;
     font-style: italic;
+    width:60%;
+    border:1px solid;
+    border-radius: 4px;
+    padding:4px;
+
 }
