--- a/public/assets/bootstrap/css/slider.css
+++ b/public/assets/bootstrap/css/slider.css
@@ -1,7 +1,6 @@
-
 .bs-slider{
     overflow: hidden;
-    max-height: 700px;
+    max-height: 950px;
     position: relative;
     background: #000000;
 }
@@ -34,6 +33,7 @@
 .fade {
     opacity: 1;
     z-index:1;
+	padding-top:100px;
 }
 .fade .item {
     top:0;
@@ -217,7 +217,7 @@
 
 .slide-text {
     left: 0;
-    top: 25%;
+    top: 15%;
     right: 0;
     margin: auto;
     padding: 10px;
